<resources>
    <string name="app_name">JAT</string>


    <string name="splash_image">splash image</string>
    <string name="toolbar_logo">toolbar_logo</string>

    <string name="navigation_recents">Recientes</string>
    <string name="navigation_add">Añadir</string>
    <string name="navigation_registers">Registros</string>

    <string name="toolbar_bluetooth">Bluetooth</string>

    <string name="fragment_recent_title">Recientes</string>
    <string name="fragment_add_title">Fragment Add</string>
    <string name="fragment_register_title">Registros</string>

    <string name="add_subtitle2">Datos de la Caracterización</string>
    <string name="add_subtitle3">Datos del Equipo</string>

    <string name="hint_date">Date</string>
    <string name="hint_equipment">Ej. incubadora, baño seco, etc.</string>
    <string name="hint_serial">Ej. 1111, AB01, 02—000, etc.</string>
    <string name="hint_client">Ej. CHSF, CSS, etc.</string>
    <string name="hint_range">Range</string>
    <string name="hint_period">Period</string>

    <string name="btn_start">Iniciar Ensayo</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="DeviceList_title">DISPOSITIVOS</string>
    <string name="system_status_title">Estado del Sistema</string>
    <string name="addfragment_lbl_s1">Sensor 1:</string>
    <string name="addfragment_lbl_s2">Sensor 2:</string>
    <string name="addfragment_lbl_s3">Sensor 3:</string>
    <string name="addfragment_lbl_s4">Sensor 4:</string>
    <string name="addfragment_lbl_s5">Sensor 5:</string>
    <string name="addfragment_lbl_s6">Sensor 6:</string>
    <string name="addfragment_lbl_s7">Sensor 7:</string>
    <string name="addfragment_lbl_s8">Sensor 8:</string>
    <string name="addfragment_lbl_s9">Sensor 9:</string>
    <string name="NA">N/A</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bluetooth_settings">BluetoothSettingsActivity</string>

    <string name="toolbar_detail_title">Informe Final</string>
    <string name="toolbar_bluetooth_title">Conexiones Bluetooth</string>
    <string name="toolbar_detail_sonda_title">Mediciones Sonda 0</string>

    <string name="lbl_starttime">FECHA INICIO:</string>
    <string name="lbl_id">ID:</string>
    <string name="lbl_date">FECHA</string>
    <string name="lbl_endtime">FECHA FIN:</string>

    <string name="lbl_equipment">EQUIPO:</string>
    <string name="lbl_client">CLIENTE:</string>
    <string name="lbl_serial">SERIE DEL EQUIPO:</string>
    <string name="lbl_model">MODELO DEL EQUIPO:</string>

    <string name="lbl_tipo">TIPO DE ENSAYO:</string>
    <string name="lbl_tensayo">TIEMPO DEL ENSAYO:</string>
    <string name="lbl_testabilizacion">TIEMPO DE ESTABILIZACIÓN:</string>
    <string name="lbl_tcaptura">TIEMPO DE CAPTURA:</string>

    <string name="lbl_s1">S1</string>
    <string name="lbl_s2">S2</string>
    <string name="lbl_s3">S3</string>
    <string name="lbl_s4">S4</string>
    <string name="lbl_s5">S5</string>

    <string name="lbl_addfragment1">Tipo:</string>
    <string name="lbl_addfragment2">Nombre Genérico del Equipo:</string>
    <string name="lbl_addfragment3">Numero de Serie o Activo:</string>
    <string name="lbl_addfragment4">Nombre del Cliente:</string>
    <string name="lbl_addfragment5">Tiempo del Ensayo:</string>
    <string name="lbl_addfragment7">Estabilización:</string>
    <string name="lbl_addfragment9">Capturar cada:</string>
    <string name="lbl_addfragment11">Modelo del Equipo:</string>
    <string name="lbl_addfragment11_hint">Ej. 619, Iso-Temp, Genérico, etc.</string>
    <string name="lbl_addfragment_minutos">Minuto(s)</string>

    <string name="lbl_search">BUSCAR</string>
    <string name="test">TEST</string>

    <string name="lbl_adapter_id">ID</string>
    <string name="lbl_adapter_datos">DATOS</string>

    <string name="activity_detalle_title">Ensayo #0</string>
    <string name="activity_detalle_subtitle1">SONDAS</string>
    <string name="activity_detalle_subcontainer_s1_lbl_time">TIEMPO</string>
    <string name="activity_detalle_subcontainer_s1_lbl_temp">TEMPERATURA</string>
    <string name="activity_detalle_subcontainer_s1_lbl_estadisticas">ESTADÍSTICAS</string>

    <string name="activity_detalle_sonda_subtitle1">UNIDAD: CELSIUS (°C)</string>
    <string name="activity_detalle_sonda_subtitle2">ESTADÍSTICAS</string>
    <string name="activity_detalle_sonda_lbl_numero">NUMERO</string>
    <string name="activity_detalle_sonda_lbl_tiempo">TIEMPO</string>
    <string name="activity_detalle_sonda_lbl_temperatura">TEMPERATURA</string>
    <string name="activity_detalle_sonda_lbl_tpromedio">TEMPERATURA PROMEDIO:</string>
    <string name="activity_detalle_sonda_lbl_tmax">TEMPERATURA MAXIMA:</string>
    <string name="activity_detalle_sonda_lbl_tmin">TEMPERATURA MINIMA:</string>

    <string name="activity_detalle_btn_s1">SONDA 1</string>
    <string name="activity_detalle_btn_s2">SONDA 2</string>
    <string name="activity_detalle_btn_s3">SONDA 3</string>
    <string name="activity_detalle_btn_s4">SONDA 4</string>
    <string name="activity_detalle_btn_s5">SONDA 5</string>
    <string name="activity_detalle_btn_s6">SONDA 6</string>
    <string name="activity_detalle_btn_s7">SONDA 7</string>
    <string name="activity_detalle_btn_s8">SONDA 8</string>
    <string name="activity_detalle_btn_s9">SONDA 9</string>

    <string name="bluetooth_search">ACTUALIZAR</string>

</resources>
