<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_register_title"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/subtitle_gradient"
            android:textColor="@color/subtitles"
            android:textStyle="bold"
            android:elevation="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/register_txt_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_starttime"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/register_title"
            app:layout_constraintRight_toLeftOf="@id/register_cal_startdate"
            />

        <TextView
            android:id="@+id/register_cal_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NA"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/register_title"
            app:layout_constraintLeft_toRightOf="@id/register_txt_startdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/register_txt_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_endtime"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/register_txt_startdate"
            app:layout_constraintRight_toLeftOf="@id/register_cal_enddate"
            />

        <TextView
            android:id="@+id/register_cal_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NA"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/register_txt_startdate"
            app:layout_constraintLeft_toRightOf="@id/register_txt_enddate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_search"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/register_txt_enddate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
