<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_gradient"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <TextView
                android:id="@+id/toolbar_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/toolbar_detail_title"
                android:textColor="@color/subtitles"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/activity_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_detail"
            android:background="@drawable/subtitle_gradient"
            android:elevation="2dp"
            android:gravity="center"
            android:text="@string/activity_detalle_title"
            android:textColor="@color/subtitles"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_detail_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_detail_title"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/NA"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_detail_lbl_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_status"
            android:layout_margin="10dp"
            android:text="@string/lbl_date"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/activity_detail_lbl_starttime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_detail_status"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/lbl_starttime"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/activity_detail_lbl_endtime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/activity_detail_status"
            android:layout_margin="10dp"
            android:text="@string/lbl_endtime"
            android:textAlignment="center" />


        <!-- TEXT VIEWS DINAMICOS FECHA, HORA INICIO y HORA FINAL -->

        <TextView
            android:id="@+id/activity_detail_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_lbl_date"
            android:layout_marginStart="10dp"
            android:text="@string/NA"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_detail_starttime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_detail_lbl_starttime"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:text="@string/NA"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_detail_endtime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/activity_detail_lbl_endtime"
            android:text="@string/NA"
            android:textAlignment="center"
            android:textStyle="bold" />


        <!-- SUBDIVISION 1-->

        <TextView
            android:id="@+id/activity_detail_subdivision1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/activity_detail_date"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/subtitle_gradient" />


        <!-- TEXTVIEWS ESTATICOS -->

        <TextView
            android:id="@+id/activity_detail_lbl_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_detail_subdivision1"
            android:layout_margin="10dp"
            android:text="@string/lbl_tipo"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/activity_detail_lbl_tensayo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_lbl_tipo"
            android:layout_margin="10dp"
            android:text="@string/lbl_tensayo"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/activity_detail_lbl_testabilizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_lbl_tensayo"
            android:layout_margin="10dp"
            android:text="@string/lbl_testabilizacion"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/activity_detail_lbl_tcaptura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_lbl_testabilizacion"
            android:layout_margin="10dp"
            android:text="@string/lbl_tcaptura"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/activity_detail_lbl_minutos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/activity_detail_tipo"
            android:layout_margin="10dp"
            android:text="@string/lbl_addfragment_minutos" />

        <TextView
            android:id="@+id/activity_detail_lbl_minutos3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/activity_detail_lbl_minutos2"
            android:layout_margin="10dp"
            android:text="@string/lbl_addfragment_minutos" />

        <TextView
            android:id="@+id/activity_detail_lbl_minutos4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/activity_detail_lbl_minutos3"
            android:layout_margin="10dp"
            android:text="@string/lbl_addfragment_minutos" />


        <!-- TEXTVIEWS DINAMICOS tipo, tensayo, testabilizacion y tcaptura -->

        <TextView
            android:id="@+id/activity_detail_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/activity_detail_subdivision1"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/activity_detail_lbl_tipo"
            android:text="@string/NA"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_detail_tensayo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_detail_tipo"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/activity_detail_lbl_tensayo"
            android:layout_toStartOf="@id/activity_detail_lbl_minutos2"
            android:text="@string/NA"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_detail_testabilizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_detail_tensayo"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/activity_detail_lbl_testabilizacion"
            android:layout_toStartOf="@id/activity_detail_lbl_minutos3"
            android:text="@string/NA"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_detail_tcaptura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_detail_testabilizacion"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/activity_detail_lbl_tcaptura"
            android:layout_toStartOf="@id/activity_detail_lbl_minutos4"
            android:text="@string/NA"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <!-- SUBDIVISION 2-->

        <TextView
            android:id="@+id/activity_detail_subdivision2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/activity_detail_lbl_tcaptura"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/subtitle_gradient" />

        <!-- TEXTVIEWS ESTATICOS -->

        <TextView
            android:id="@+id/activity_detail_lbl_equipment_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_subdivision2"
            android:layout_margin="10dp"
            android:text="@string/lbl_client" />

        <TextView
            android:id="@+id/activity_detail_lbl_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_lbl_equipment_client"
            android:layout_margin="10dp"
            android:text="@string/lbl_equipment" />

        <TextView
            android:id="@+id/activity_detail_lbl_equipment_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_lbl_equipment"
            android:layout_margin="10dp"
            android:text="@string/lbl_model" />

        <TextView
            android:id="@+id/activity_detail_lbl_equipment_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/activity_detail_lbl_equipment_model"
            android:layout_margin="10dp"
            android:text="@string/lbl_serial" />


        <!-- TEXTVIEWS DINAMICOS CLIENT, EQUIPMENT, MODEL Y SERIAL -->

        <TextView
            android:id="@+id/activity_detail_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/activity_detail_subdivision2"
            android:layout_toEndOf="@id/activity_detail_lbl_equipment_client"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/NA"/>

        <TextView
            android:id="@+id/activity_detail_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/activity_detail_lbl_equipment_client"
            android:layout_toEndOf="@id/activity_detail_lbl_equipment"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/NA"/>

        <TextView
            android:id="@+id/activity_detail_equipment_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/activity_detail_equipment"
            android:layout_toEndOf="@id/activity_detail_lbl_equipment_model"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/NA"/>

        <TextView
            android:id="@+id/activity_detail_equipment_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/activity_detail_lbl_equipment_model"
            android:layout_toEndOf="@id/activity_detail_lbl_equipment_serial"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/NA"/>

        <!-- SONDA 1 -->

        <RelativeLayout
            android:id="@+id/subcontainer_s1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/activity_detail_equipment_serial">

            <TextView
                android:id="@+id/activity_detail_subcontainer_s1_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/subtitle_gradient"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/activity_detalle_subtitle1"
                android:textColor="@color/subtitles"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_detail_subcontainer_s1_lbl_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/activity_detail_subcontainer_s1_title"
                android:layout_alignParentStart="true"
                android:textAlignment="center"
                android:text="@string/activity_detalle_subcontainer_s1_lbl_time"/>

            <TextView
                android:id="@+id/activity_detail_subcontainer_s1_lbl_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_below="@id/activity_detail_subcontainer_s1_title"
                android:layout_toEndOf="@id/activity_detail_subcontainer_s1_lbl_time"
                android:textAlignment="center"
                android:text="@string/activity_detalle_subcontainer_s1_lbl_temp"/>

            <TextView
                android:id="@+id/activity_detail_subcontainer_s1_lbl_estadisticas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/activity_detail_subcontainer_s1_title"
                android:layout_toEndOf="@id/activity_detail_subcontainer_s1_lbl_temp"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"
                android:text="@string/activity_detalle_subcontainer_s1_lbl_estadisticas"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
